objects/Course_Weightings__c.object
<CustomObject>
    <description>Stores Weightings for a course per reporting period when Final Grade is calculated</description>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Weightings</relationshipLabel>
        <relationshipName>Course_Weightings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Key/Indicator for Reporting Period # that Aligns to the Weighting</description>
        <label>Reporting Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Weighting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links the course weighting to a parent weighting; primarily used for quarter section grades rolling up to semester section grades.</description>
        <label>Parent Weighting</label>
        <referenceTo>Course_Weightings__c</referenceTo>
        <relationshipLabel>Child Weightings</relationshipLabel>
        <relationshipName>Course_Weightings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reporting period picklist value (Time Record Type) that the Course Weighting is related to</description>
        <label>Reporting Period Type</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Course Weightings</relationshipLabel>
        <relationshipName>Course_Weightings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Course Weightings</relationshipLabel>
        <relationshipName>Course_Weightings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weighting__c</fullName>
        <defaultValue>0</defaultValue>
        <label>% Weighting</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Course Weighting</label>
    <listViews>
        <fullName>Joe</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Weighting__c</columns>
        <columns>Course__c</columns>
        <columns>Key__c</columns>
        <columns>Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>Joe</label>
    </listViews>
    <nameField>
        <displayFormat>CWGHT-{000}</displayFormat>
        <label>Course Weightings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Weightings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>