objects/Course_Weightings__c/listViews/Joe.listView-meta.xml
<ListView>
    <fullName>Joe</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Weighting__c</columns>
    <columns>Course__c</columns>
    <columns>Key__c</columns>
    <columns>Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>Joe</label>
</ListView>